[package]
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
description = "A yacht game scoreboard"
edition = "2021"
license = "MIT"
name = "phasellus"
version = "0.4.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[dependencies.cursive]
version = "0.20"
default-features = false
features = ["crossterm-backend"]
