[package]
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
description = "A yacht game scoreboard"
edition = "2021"
license = "MIT"
name = "phasellus"
version = "0.4.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[dependencies]
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
unicode-width = "0.1.10"

[dependencies.cursive]
version = "0.20"
default-features = false
features = ["crossterm-backend"]
